# pqc_secure_boot

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: integration.md
patches/: uboot-2026.04-mldsa44.diff
pqc_boot/: __init__.py  cli.py  config.py  context.py  pipeline.py  prereqs.py  rollback.py  ssh.py  state.py
pqc_boot/_mldsa/: assert.h  keygen.c  mldsa_native.c  mldsa_native.h  mldsa_native_config.h
pqc_boot/_mldsa/src/: cbmc.h  common.h  packing.c  packing.h  poly.c  poly.h  poly_kl.c  poly_kl.h  polyvec.c  polyvec.h  polyvec_lazy.c  polyvec_lazy.h  sign.c  sign.h
pqc_boot/_mldsa/src/fips202/: fips202.c  fips202.h  fips202x4.h  keccakf1600.c
pqc_boot/ai/: __init__.py  build_fixer.py  patch_generator.py
pqc_boot/patch_assets/include/u-boot/: ml-dsa.h
pqc_boot/patch_assets/lib/ml-dsa/: Kconfig  Makefile  mldsa-sign.c  mldsa-verify.c
pqc_boot/stages/: __init__.py  build.py  clone.py  deploy.py  keys.py  patch.py  sign.py  verify.py
tests/: test_build.py  test_build_fixer.py  test_cli.py  test_config.py  test_context.py  test_deploy.py  test_keys.py  test_patch.py  test_patch_generator.py  test_pipeline.py  test_prereqs.py  test_rollback.py  test_sign.py  test_ssh.py  test_state.py  test_verify.py
